# uniclaw

./: .env.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.worker  FEATURE_PARITY.md  IDENTITY.md  README.md  SOUL.md  USER.md  docker-compose.yml
channels-src/slack/: Cargo.toml  build.sh
channels-src/telegram/: Cargo.toml  build.sh
channels-src/whatsapp/: Cargo.toml
channels/whatsapp/: Cargo.toml
channels/whatsapp/src/: lib.rs
deploy/: cloud-sql-proxy.service  env.example  setup.sh  uniclaw.service
docs/: BUILDING_CHANNELS.md  PR8_IRONCLAW_REVIEW_PROPOSAL.md  SECURITY_DEPLOY_AUDIT.md  TELEGRAM_SETUP.md  UNISWAP_V4_HOOKS_KNOWLEDGE_BASE.md
examples/: test_heartbeat.rs
migrations/: V8__settings.sql
scripts/: build-all.sh
skills/uniclaw/: SKILL.md
src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  service.rs  settings.rs
src/agent/: router.rs
src/channels/: mod.rs  repl.rs
src/cli/: config.rs  doctor.rs  mcp.rs  mod.rs  oauth_defaults.rs  status.rs  tool.rs
src/extensions/: discovery.rs  manager.rs  registry.rs
src/llm/: mod.rs  nearai.rs  provider.rs  rig_adapter.rs  session.rs
src/observability/: log.rs  mod.rs  multi.rs  noop.rs  traits.rs
src/orchestrator/: job_manager.rs
src/pairing/: mod.rs  store.rs
src/sandbox/: mod.rs
src/secrets/: keychain.rs  mod.rs
src/setup/: README.md  (+4 more)
tests/: openai_compat_integration.rs  pairing_integration.rs  wasm_channel_integration.rs  workspace_integration.rs  ws_gateway_integration.rs
tools-src/okta/: Cargo.toml
tools-src/okta/src/: lib.rs
wix/: main.wxs
(+60 files in other folders)
