[package]
name = "whatsapp-channel"
version = "0.1.0"
edition = "2021"
description = "WhatsApp channel for near-agent using the Cloud API"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
